--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
-  <h1><strong>Text Formatting in HTML</strong></h1>
+  <h1>Text Formatting in HTML</h1>
 
   <!-- Test 2: Wrap the subtitle below, 'A Love Story', in `h2` tags -->
   <h2>A Love Story</h2>
@@ -17,7 +17,7 @@
   <h3><em>Chapter One</em></h3>
 
   <!-- Test 4: Wrap the following two text blocks in separate `p` tags -->
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+  <p>Lorem <strong>ipsum</strong> dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
   incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
   nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
   Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
